# wit-bindgen

./: Cargo.toml  README.md  expected  expected.hpp
autosar/: ara.wit  radar.wit
crates/c-host/: Cargo.toml
crates/c-host/src/: lib.rs
crates/c-host/tests/: codegen.rs
crates/c/src/: lib.rs
crates/core/src/: abi.rs
crates/cpp/: Cargo.toml
crates/cpp-host/: Cargo.toml
crates/cpp-host/src/: lib.rs
crates/cpp-host/tests/: codegen.rs
crates/cpp/helper-types/: wit-host.h
crates/cpp/src/: lib.rs  wamr.rs
crates/cpp/test_headers/: expected
crates/cpp/tests/native_mesh/: Makefile  README.md
crates/cpp/tests/native_mesh/cpp/component_a/: Makefile  component_a
crates/cpp/tests/native_mesh/cpp/component_b/: Makefile
crates/cpp/tests/native_mesh/cpp/mesh/: Makefile
crates/cpp/tests/native_mesh/mesh/: mesh_cpp_native.h
crates/cpp/tests/native_mesh/rust/component_a/: Cargo.toml
crates/cpp/tests/native_mesh/rust/component_a/src/: a.rs  a_impl.rs  main.rs
crates/cpp/tests/native_mesh/rust/component_b/: Cargo.toml
crates/cpp/tests/native_mesh/rust/component_b/src/: b.rs  b_impl.rs  lib.rs  resource_table.rs
crates/cpp/tests/native_mesh/rust/mesh/: Cargo.toml
crates/cpp/tests/native_mesh/rust/mesh/src/: impl_mesh.rs  lib.rs  mesh.rs
crates/cpp/tests/native_strings/: Makefile  README.md  guest_2.cpp  guest_imported_fns.cpp  guest_imports.cpp  main.cpp  the_world.cpp  the_world_native.cpp
crates/cpp/tests/native_strings/cpp_host/: Makefile  guest_imported_fns.cpp  the_world_native.cpp
crates/cpp/tests/native_strings/guest/: Makefile  guest.cpp
crates/cpp/tests/native_strings/rust-host/rust-host/src/: lib.rs  the_world_native.rs
crates/cpp/tests/native_strings/rust-host/rust_app/: Cargo.toml
crates/cpp/tests/native_strings/rust-host/rust_app/src/: main.rs
crates/cpp/tests/native_strings/rust-host/rust_native_host_lib/: Cargo.toml
crates/cpp/tests/native_strings/rust-host/rust_native_host_lib/src/: generated.rs  guest_imported_fns.rs  native_imports.rs  the_native_imports.rs  the_world.rs
crates/cpp/tests/native_strings/rust/src/: lib.rs  the_world.rs
crates/rust/src/: bindgen.rs  interface.rs
tests/autosar/: deps.toml  radar.wit
tests/codegen/: issue573.wit  issue607.wit  small-anonymous.wit
