[package]
name = "wit-bindgen-cli"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.14.0"
edition = { workspace = true }
repository = 'https://github.com/bytecodealliance/wit-bindgen'
license = "Apache-2.0 WITH LLVM-exception"
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
CLI tool to generate bindings for WIT documents and the component model.
"""

[workspace]
members = [
  "crates/test-rust-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
heck =  { version = "0.4", features = ["unicode"] }
pulldown-cmark = { version = "0.9", default-features = false }
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
indexmap = "2.0.2"

wasm-encoder = "0.38.0"
wasm-metadata = "0.10.13"
wasmtime-wasi = "15.0.0"
wit-parser = "0.13.0"
wit-component = "0.18.2"

wit-bindgen-core = { path = 'crates/core', version = '0.14.0' }
wit-bindgen-c = { path = 'crates/c', version = '0.14.0' }
wit-bindgen-rust = { path = "crates/rust", version = "0.14.0" }
wit-bindgen-teavm-java = { path = 'crates/teavm-java', version = '0.14.0' }
wit-bindgen-go = { path = 'crates/go', version = '0.14.0' }
wit-bindgen-csharp = { path = 'crates/csharp', version = '0.14.0' }
wit-bindgen-markdown = { path = 'crates/markdown', version = '0.14.0' }
wit-bindgen = { path = 'crates/guest-rust', version = '0.14.0', default-features = false }
# wit-bindgen-rust-macro-shared = { path = 'crates/rust-macro-shared', version = '0.3.0' }
wit-bindgen-c-host = { path = 'crates/c-host', version = '0.1.0' }
wit-bindgen-cpp = { path = 'crates/cpp', version = '0.1.0' }
wit-bindgen-cpp-host = { path = 'crates/cpp-host', version = '0.1.0' }

[[bin]]
name = "wit-bindgen"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-c = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-c-host = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-cpp = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-cpp-host = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-markdown = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-teavm-java = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-go = { workspace = true, features = ['clap'], optional = true }
wit-bindgen-csharp = { workspace = true, features = ['clap'], optional = true }
wit-component = { workspace = true }
wasm-encoder = { workspace = true }

[features]
default = [
  'c',
  'rust',
  'markdown',
  'teavm-java',
  'go',
  'csharp-naot',
  'cpp',
]
c = ['dep:wit-bindgen-c']
c-host = ['dep:wit-bindgen-c-host']
cpp = ['dep:wit-bindgen-cpp']
cpp-host = ['dep:wit-bindgen-cpp-host']
rust = ['dep:wit-bindgen-rust']
markdown = ['dep:wit-bindgen-markdown']
teavm-java = ['dep:wit-bindgen-teavm-java']
go = ['dep:wit-bindgen-go']
csharp = ['dep:wit-bindgen-csharp']
csharp-naot = ['csharp']
csharp-mono = ['csharp']

[dev-dependencies]
heck = { workspace = true }
wasmtime = { version = "15", features = ['component-model'] }
wasmtime-wasi = { workspace = true }
test-artifacts = { path = 'crates/test-rust-wasm/artifacts' }
wit-parser = { workspace = true }
